fix of home page image alignment

--- a/wp-content/themes/swgeula/style.scss
+++ b/wp-content/themes/swgeula/style.scss
@@ -3063,6 +3063,12 @@ li.comment {
   outline: none;
 }
 
+.home .hero_image .bgImg {
+        right: 0;
+        left: 0;
+        margin: auto;
+}
+
 /* ----------- ----------- ----------- ----------- ----------- ----------- ----------- -----------
 _responsive styles
 ----------- ----------- ----------- ----------- ----------- ----------- ----------- -----------  */
